--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.14.0",
+    "@react-native-community/datetimepicker": "^8.0.1",
     "@types/passport-jwt": "^4.0.1",
     "argon2": "^0.31.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
